[package]
name = "rocketdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
ics = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.8", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = "1.15.0"
url = "2.2.2"
log = "0.4.0"
env_logger = "0.8.4"
